# psapp

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: python-app.yml
doc/: dx.md
src/psapp/: ps.py
tests/: cli_test.py  ssm_client_test.py
